# r3vp

./: .gitattributes  .gitignore  CHANGELOG.md  README.md  SECURITY.md  Tech.md  pyproject.toml
.claude/: settings.json
apps/api/: Dockerfile  alembic.ini  docker-compose.yml  mypy.ini  pyproject.toml  ruff.toml
apps/api/src/: auth.py  config.py  main.py  scheduler.py
apps/api/src/db/: session.py
apps/api/src/db/migrations/: env.py
apps/api/src/integrations/: siem.py  soar.py  veeamone.py
apps/api/src/models/: __init__.py  appliance.py  billing.py  compliance_framework.py  continuous_validation.py  executive_report.py  fleet.py  integration.py  mssp.py  notification.py  onboarding.py  rbac.py  report.py  report_schedule.py  runbook.py  test_run.py  threat_scan.py  workload.py
apps/api/src/routers/: api_keys.py  appliances.py  audit.py  billing.py  compliance_frameworks.py  continuous_validation.py  evidence.py  executive.py  fleet.py  insights.py  integrations.py  mssp.py  multicloud.py  notifications.py  onboarding.py  portal_appliances.py  readiness.py  report_schedules.py  reports.py  runbooks.py  sso.py  team.py  test_runs.py  threat_intel.py  users.py  workloads.py
apps/api/src/services/: ai_insights.py  appliance.py  billing.py  compliance_framework.py  continuous_validation.py  delivery.py  evidence_vault.py  executive_report.py  false_positives.py  incident_response.py  markdown_report.py  notification_config.py  notifications.py  onboarding.py  rbac.py  report.py  runbook_engine.py
apps/api/src/services/integrations/: __init__.py  dispatcher.py  jira.py  pagerduty.py  sentinel.py  servicenow.py  splunk.py
apps/api/src/templates/: compliance_report.html  cyber_insurance_report.html  report.html
apps/api/tests/: conftest.py  test_appliance_router.py  test_auth_jwt.py  test_health.py
apps/api/tests/integration/: conftest.py  test_inventory_sync.py  test_readiness_score.py
apps/appliance/: Dockerfile  docker-compose.yml  mypy.ini  pyproject.toml  ruff.toml
apps/appliance/health_checks/: active_directory.py  base.py  linux_os.py  mssql.py  windows_os.py
apps/appliance/src/: config.py  main.py
apps/appliance/src/audit/: chain.py
apps/appliance/src/connectors/aws_backup/: client.py
apps/appliance/src/relay/: client.py
apps/appliance/src/services/: __init__.py  delivery.py
apps/appliance/src/threat_intel/: database.py  dependency_scanner.py  models.py  scanner.py  yara_engine.py
apps/appliance/src/vault/: loader.py  secrets.template.yaml
apps/appliance/src/workers/: runner.py
apps/appliance/src/workflows/: activities.py  recovery_test.py  report_schedule_workflow.py  runbook_workflow.py
apps/appliance/tests/: test_health_checks.py  test_vcenter_models.py  test_veeam_models.py
(+158 files in other folders)
