[project]
name = "r3vp-api"
version = "0.1.0"
description = "R3VP SaaS backend API"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111",
    "python-multipart>=0.0.9",
    "uvicorn[standard]>=0.29",
    "sqlalchemy[asyncio]>=2.0",
    "alembic>=1.13",
    "asyncpg>=0.29",
    "pydantic>=2.7",
    "pydantic-settings>=2.2",
    "temporalio>=1.7",
    "pyjwt[crypto]>=2.10",
    "boto3>=1.34",
    "structlog>=24.0",
    "redis>=5.0",
    "httpx>=0.27",
    "weasyprint>=62.0",
    "jinja2>=3.1",
    "apscheduler>=3.10",
    "aiofiles>=23.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.4",
    "mypy>=1.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
