[project]
name = "r3vp-appliance"
version = "0.1.0"
description = "R3VP on-premises validation appliance"
requires-python = ">=3.12"
dependencies = [
    "httpx[http2]>=0.27",
    "pyvmomi>=8.0",
    "temporalio>=1.7",
    "cryptography>=42.0",
    "pydantic>=2.7",
    "pydantic-settings>=2.2",
    "structlog>=24.0",
    "tenacity>=8.3",
    "paramiko>=3.4",
    "pywinrm>=0.4",
    "pillow>=10.3",
    "yara-python>=4.3",
    "psutil>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
r3vp-appliance = "src.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
